# remote-setup

./: test.text
qmodel-main/: pyproject.toml  tags
